--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -213,7 +213,19 @@
     </div>
   </div>
 
-<!-- SOCIAL MEDIA ICONS -->
+<!-- GOOGLE CSE
+
+<script>
+  (function() {
+    var cx = '017615904137948277674:1am3l4fbft8';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script> -->
 
     <js-bottom-placeholder token="{{ placeholder_token|raw }}">
   </body>
