--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -61,6 +61,7 @@
     <title>{{ head_title|safe_join(' | ') }}</title>
     <css-placeholder token="{{ placeholder_token|raw }}">
     <js-placeholder token="{{ placeholder_token|raw }}">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600" rel="stylesheet">
     <link rel="shortcut icon" href="https://repo.wsu.edu/spine/1/favicon.ico" />
   </head>
   <body{{ attributes.addClass(body_classes) }}>
@@ -74,7 +75,7 @@
     <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-primary-navbar-collapse-1">
             <span class="sr-only">Toggle navigation</span>
-            <span class="menu-bar">Menu</span>
+            <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
@@ -88,7 +89,7 @@
             <li><a href="https://admin.vancouver.wsu.edu/research">Research</a></li>
             <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations">Alumni</a></li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="https://admin.vancouver.wsu.edu/academic-affairs">Academics</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
@@ -107,7 +108,7 @@
                 <div class="input-group" tabindex="2">
                     <input data-drupal-selector="edit-keys" class="form-search form-control" placeholder="Search" type="search" id="edit-keys" name="keys" value="">
                     <div class="input-group-btn" aria-hidden="true">
-                        <button class="btn btn-default" type="submit" value="Search"><i class="glyphicon glyphicon-search"></i></button>
+                        <button class="btn btn-default" type="submit" value="Search"><span class="glyphicon glyphicon-search"></span></button>
                     </div>
                 </div>
             </form>
@@ -141,7 +142,7 @@
 <div class="footer-sitemap">
   <div class="col-md-3">
   		<ul>
- 			<li class="sitemap-section">WSU Vancouver</li>
+ 			<li class="sitemap-section">Quick links</li>
 			<li><a href="https://www.vancouver.wsu.edu/about-wsu-vancouver">About WSU Vancouver</a></li>
 			<li><a href="https://admin.vancouver.wsu.edu">Administration</a></li>
 			<li><a href="https://hd.vancouver.wsu.edu/child-development">Child Development Program</a></li>
@@ -206,9 +207,9 @@
     <div class="col-md-6">
       <div>
   		<ul>
-        <li><strong>14204 NE Salmon Creek Ave, Vancouver, WA, 98686</strong></li>
-        <li><a href="tel:+13605469788">360-546-9788</a></li>
-        <li><a href="https://www.vancouver.wsu.edu/campus-map-directions-and-parking-information">Map</a></li>
+        <li>14204 NE Salmon Creek Ave, Vancouver, WA, 98686</li>
+        <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> <a href="tel:+13605469788">360-546-9788</a></li>
+        <li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> <a href="https://www.vancouver.wsu.edu/campus-map-directions-and-parking-information">Map</a></li>
       </ul>
     </div>
   </div>
