--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -53,10 +53,11 @@ hr {
   font-size: 15px;
 }
 
-.dropdown-menu > li > a:hover,
-.dropdown-menu > li > a:focus {
+.dropdown-menu > li {
+  > a:hover, > a:focus {
   background-color: $dark-gray;
   color: $white;
+  }
 }
 
 .navbar-default {
@@ -227,6 +228,9 @@ body > nav > div.navbar-header > button {
   #bs-primary-navbar-collapse-1 > div > form > div > div > button:hover,
   #bs-primary-navbar-collapse-1 > div > form > div > div > button:focus {
     text-decoration: underline;
+  }
+  .dropdown-menu > li a {
+    margin-bottom: .7em;
   }
 }
 
@@ -465,6 +469,18 @@ h1.page-header,
 h2, h3, h4, h5, p, table, th, td, tr, hr, blockquote {
   margin-right: 25px;
   margin-left: 25px;
+}
+
+.region-content form {
+  max-width: 500px;
+}
+
+.form-item {
+  margin-bottom: 1em;
+}
+
+.select-wrapper {
+  display: block;
 }
 
 legend {
