Remove stray <div> in html.html.twig
Minor: CSS clean up

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -195,24 +195,25 @@
 <!-- FOOTER COPYRIGHT -->
 
 <div class="footer-copyright">
-    <div class="col-md-6">
-  	  <ul>
-        <li class="copyright-section"><strong>&copy; WSU Vancouver</strong></li>
-        <li><a href="https://access.wsu.edu/">Accessibility</a></li>
-        <li><a href="https://policies.wsu.edu/">Policies</a></li>
-        <li><a href="http://public.wsu.edu/~forms/ProposedWAC.html">Rule making</a></li>
-        <li><a href="https://ucomm.wsu.edu/wsu-copyright-policy/">Copyright</a></li>
-      </ul>
-    </div>
-    <div class="col-md-6">
-      <div>
-  		<ul>
-        <li>14204 NE Salmon Creek Ave, Vancouver, WA, 98686</li>
-        <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> <a href="tel:+13605469788">360-546-9788</a></li>
-        <li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> <a href="https://www.vancouver.wsu.edu/campus-map-directions-and-parking-information">Map</a></li>
-      </ul>
-    </div>
+  <div class="col-md-6">
+	  <ul>
+      <li class="copyright-section"><strong>&copy; WSU Vancouver</strong></li>
+      <li><a href="https://access.wsu.edu/">Accessibility</a></li>
+      <li><a href="https://policies.wsu.edu/">Policies</a></li>
+      <li><a href="http://public.wsu.edu/~forms/ProposedWAC.html">Rule making</a></li>
+      <li><a href="https://ucomm.wsu.edu/wsu-copyright-policy/">Copyright</a></li>
+    </ul>
   </div>
+  <div class="col-md-6">
+		<ul>
+      <li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> 14204 NE Salmon Creek Ave, Vancouver, WA, 98686</li>
+      <li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> <a href="tel:+13605469788">360-546-9788</a></li>
+      <li><span class="glyphicon glyphicon-globe" aria-hidden="true"></span> <a href="https://www.vancouver.wsu.edu/campus-map-directions-and-parking-information">Map</a></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </div>
+</div>
 
 <!-- GOOGLE CSE
 
