--- a/css/style.css
+++ b/css/style.css
@@ -6475,7 +6475,8 @@ body > nav > div.navbar-header > button {
   -moz-transition: all .2s ease-out;
   -webkit-transition: all .2s ease-out; }
 
-.header-logo .col-md-6 a.apply-button:hover, .header-logo .col-md-6 a.apply-button:focus {
+.header-logo .col-md-6 a.apply-button:hover,
+.header-logo .col-md-6 a.apply-button:focus {
   background: #c60c30;
   border: 1px solid #c60c30;
   color: #fff;
@@ -6791,12 +6792,13 @@ div.region.region-content > ol {
 .well img {
   max-width: 100%; }
 
+h2.block-title,
+.well img {
+  margin-top: 25px; }
+
 body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(2) a,
 body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(3) a {
   text-decoration: underline; }
-
-h2.block-title, .well img {
-  margin-top: 25px; }
 
 /* Forms */
 #edit-actions-submit {
@@ -6842,7 +6844,8 @@ h2.block-title, .well img {
     display: none; }
   .footer-sitemap .col-md-3 {
     height: auto; }
-  .footer-sitemap .col-md-3 li {
+  .footer-sitemap .col-md-3 li,
+  .footer-copyright .col-md-6 li {
     display: block; } }
 
 /**
