--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -206,7 +206,8 @@ body > nav > div.navbar-header > button {
 
 /* Navbar small screens */
 
-.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
   border-top: 0;
   border-bottom: 0;
   box-shadow: none;
@@ -268,7 +269,8 @@ body > nav > div.navbar-header > button {
   -moz-transition: all .2s ease-out;
   -webkit-transition: all .2s ease-out;
   }
-  a.apply-button:hover, a.apply-button:focus {
+  a.apply-button:hover,
+  a.apply-button:focus {
     background: $red;
     border: 1px solid $red;
     color: $white;
@@ -330,7 +332,7 @@ body > nav > div.navbar-header > button {
   p + h2, p + h3, p + h4,
   table + h2, table + h3,
   ul + h2, ul + h3, ul + h4,
-  ol + h2, ol + h3, ol + h4  {
+  ol + h2, ol + h3, ol + h4 {
   margin-top: 40px;
   }
 }
@@ -661,15 +663,16 @@ div.region.region-content > ol {
   max-width: 100%;
 }
 
+h2.block-title,
+.well img {
+  margin-top: 25px;
+}
+
 body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(2),
 body > div.main-container.container-fluid.js-quickedit-main-content > div > aside:nth-child(3) {
   a {
     text-decoration: underline;
   }
-}
-
-h2.block-title, .well img {
-  margin-top: 25px;
 }
 
 /* Forms */
@@ -729,7 +732,8 @@ h2.block-title, .well img {
   .footer-sitemap .col-md-3 {
     height: auto;
   }
-  .footer-sitemap .col-md-3 li {
+  .footer-sitemap .col-md-3 li,
+  .footer-copyright .col-md-6 li {
     display: block;
   }
 }
