--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -89,7 +89,7 @@
             <li><a href="https://admin.vancouver.wsu.edu/research">Research</a></li>
             <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations">Alumni</a></li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="https://admin.vancouver.wsu.edu/academic-affairs">Academics</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
@@ -214,20 +214,6 @@
     </ul>
   </div>
 </div>
-
-<!-- GOOGLE CSE
-
-<script>
-  (function() {
-    var cx = '017615904137948277674:1am3l4fbft8';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
-    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
-  })();
-</script> -->
 
     <js-bottom-placeholder token="{{ placeholder_token|raw }}">
   </body>
