--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -89,7 +89,7 @@
             <li><a href="https://admin.vancouver.wsu.edu/research">Research</a></li>
             <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations">Alumni</a></li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="https://admin.vancouver.wsu.edu/academic-affairs">Academics</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
