Added aria labels and site sections for screen readers

--- a/templates/html.html.twig
+++ b/templates/html.html.twig
@@ -79,7 +79,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="https://vancouver.wsu.edu"> <a href="https://www.vancouver.wsu.edu"><img class="horizontal-logo" src="https://www.vancouver.wsu.edu/sites/www.vancouver.wsu.edu/themes/omegawsuv/images/wsu-vancouver-horizontal-logo-rgb.svg" alt="Washington State University Vancouver logo"></a></a>
+        <a class="navbar-brand" href="https://vancouver.wsu.edu"> <a href="https://www.vancouver.wsu.edu"><img class="horizontal-logo" src="http://8dev.vancouver.wsu.edu/sites/all/themes/bootstrap_sass_wsuv/images/wsu-vancouver-horizontal-logo-rgb.svg" alt="WSU Vancouver home page"></a></a>
     </div>
     <div class="collapse navbar-collapse" id="bs-primary-navbar-collapse-1" tabindex="1">
         <ul class="nav navbar-nav">
@@ -89,7 +89,7 @@
             <li><a href="https://admin.vancouver.wsu.edu/research">Research</a></li>
             <li><a href="https://admin.vancouver.wsu.edu/development-and-alumni-relations">Alumni</a></li>
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tools <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Resources dropdown menu">Resources <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="https://admin.vancouver.wsu.edu/academic-affairs">Academics</a></li>
                   <li><a href="https://studentaffairs.vancouver.wsu.edu/student-affairs/bookie-student-bookstore">Bookstore</a></li>
@@ -120,7 +120,7 @@
 
 <div class="header-logo">
   <div class="col-sm-6 col-md-6">
-    <a href="https://www.vancouver.wsu.edu"><img class="primary-logo" src="https://www.vancouver.wsu.edu/sites/www.vancouver.wsu.edu/themes/omegawsuv/images/wsu-vancouver-primary-logo-rgb.svg" alt="Washington State University Vancouver logo"></a>
+    <a href="https://www.vancouver.wsu.edu"><img class="primary-logo" src="http://8dev.vancouver.wsu.edu/sites/all/themes/bootstrap_sass_wsuv/images/wsu-vancouver-primary-logo-rgb.svg" alt="WSU Vancouver home page"></a>
   </div>
   <div class="col-sm-6 col-md-6">
     <a class="apply-button" href="https://studentaffairs.vancouver.wsu.edu/admissions/apply">Apply now</a>
@@ -139,6 +139,7 @@
 
 <!-- FOOTER SITEMAP -->
 
+<footer role="navigation" aria-label="sitemap">
 <div class="footer-sitemap">
   <div class="col-md-3">
   		<ul>
@@ -194,7 +195,7 @@
 
 <!-- FOOTER COPYRIGHT -->
 
-<div class="footer-copyright">
+<div class="footer-copyright" role="contentinfo">
   <div class="col-md-6">
 	  <ul>
       <li class="copyright-section"><strong>&copy; WSU Vancouver</strong></li>
@@ -214,6 +215,7 @@
     </ul>
   </div>
 </div>
+</footer>
 
     <js-bottom-placeholder token="{{ placeholder_token|raw }}">
   </body>
