--- a/css/style.css
+++ b/css/style.css
@@ -6701,6 +6701,9 @@ ol.breadcrumb {
   padding-top: 18px;
   border-top: 10px solid #f8f8f8; }
 
+.paragraph__column h3.social {
+  text-align: center; }
+
 .paragraph__column p.statistic {
   text-align: center;
   font-size: 36px;
@@ -6716,6 +6719,15 @@ ol.breadcrumb {
 .paragraph__column p strong.top-border {
   margin-left: 0;
   margin-bottom: -34px; }
+
+.paragraph__column p.social {
+  text-align: center;
+  padding-bottom: 40px; }
+
+.paragraph__column img.social {
+  width: 3em;
+  opacity: 0.65;
+  padding: 8px; }
 
 .paragraph__column blockquote {
   margin-top: 1.5em;
