Add p.statistic to ...-red-strong paragraph style

--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -581,7 +581,7 @@ ol.breadcrumb {
 
 .paragraph--color--rgba-red-strong {
   background-color: $brand-primary;
-  h2, h3, p, strong, blockquote {
+  h2, h3, p, p.statistic, strong, blockquote {
     color: $white;
     border-color: $white;
   }
