--- a/css/style.css
+++ b/css/style.css
@@ -6738,7 +6738,7 @@ ol.breadcrumb {
 
 .paragraph--color--rgba-red-strong {
   background-color: #981e32; }
-  .paragraph--color--rgba-red-strong h2, .paragraph--color--rgba-red-strong h3, .paragraph--color--rgba-red-strong p, .paragraph--color--rgba-red-strong strong, .paragraph--color--rgba-red-strong blockquote {
+  .paragraph--color--rgba-red-strong h2, .paragraph--color--rgba-red-strong h3, .paragraph--color--rgba-red-strong p, .paragraph--color--rgba-red-strong p.statistic, .paragraph--color--rgba-red-strong strong, .paragraph--color--rgba-red-strong blockquote {
     color: #fff;
     border-color: #fff; }
 
